<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="379dp"
        android:layout_height="642dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="95dp"
                android:layout_height="42dp"
                android:text="TextView"
                tools:layout_editor_absoluteX="26dp"
                tools:layout_editor_absoluteY="34dp" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="251dp"
                android:layout_height="48dp"
                android:text="Injuries"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Minor Cuts"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="126dp" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minorcuts"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="164dp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Burns"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="126dp" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/burns"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="164dp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sprains"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="88dp"
                tools:layout_editor_absoluteY="126dp" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sprains"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="164dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>